Adding age as feature.

--- a/titanic_model.ipynb
+++ b/titanic_model.ipynb
@@ -21,7 +21,7 @@
    "outputs": [],
    "source": [
     "titanic_df = pd.read_csv(\"./data/train.csv\")\n",
-    "titanic_df"
+    "titanic_df.count()"
    ]
   },
   {
@@ -31,7 +31,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "titanic_df[\"sex_enc\"] = np.where(titanic_df[\"Sex\"]==\"male\",1,0)"
+    "titanic_df[\"sex_enc\"] = np.where(titanic_df[\"Sex\"]==\"male\", 1, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0cc39f23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mean_age = titanic_df[\"Age\"].mean()\n",
+    "titanic_df[\"new_age\"]= titanic_df[\"Age\"].fillna(mean_age)\n",
+    "titanic_df"
    ]
   },
   {
@@ -41,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_df = titanic_df[[\"sex_enc\", \"SibSp\", \"Parch\", \"Survived\", \"Pclass\", \"Fare\"]]"
+    "input_df = titanic_df[[\"sex_enc\", \"SibSp\", \"Parch\", \"Survived\", \"Pclass\", \"Fare\", \"new_age\"]]"
    ]
   },
   {
@@ -64,7 +76,7 @@
     "def df_to_dataset(dataframe, shuffle=True, batch_size=32):\n",
     "  dataframe = dataframe.copy()\n",
     "  labels = dataframe.pop('Survived')\n",
-    "  ds = tf.data.Dataset.from_tensor_slices((dataframe[[\"sex_enc\", \"SibSp\", \"Parch\", \"Pclass\", \"Fare\"]], labels))\n",
+    "  ds = tf.data.Dataset.from_tensor_slices((dataframe[[\"sex_enc\", \"SibSp\", \"Parch\", \"Pclass\", \"Fare\", \"new_age\"]], labels))\n",
     "  if shuffle:\n",
     "    ds = ds.shuffle(buffer_size=len(dataframe))\n",
     "  ds = ds.batch(batch_size)\n",
@@ -95,7 +107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_shape = (5,)\n",
+    "input_shape = (6,)\n",
     "inputs = tf.keras.layers.Input(shape=input_shape)\n",
     "x = tf.keras.layers.Dense(32, activation=\"relu\")(inputs)\n",
     "x = tf.keras.layers.Dropout(0.5)(x)\n",
@@ -103,7 +115,7 @@
     "\n",
     "model = tf.keras.Model(inputs, output)\n",
     "model.compile(optimizer='adam', loss=tf.keras.losses.BinaryCrossentropy(), metrics=[\"accuracy\"])\n",
-    "model.fit(train_ds, epochs=30, validation_data=val_ds)"
+    "model.fit(train_ds, epochs=50, validation_data=val_ds)"
    ]
   },
   {
@@ -128,7 +140,8 @@
    "source": [
     "test_data = pd.read_csv(\"./data/test.csv\")\n",
     "pred_in = test_data.copy()\n",
-    "pred_in[\"sex_enc\"] = np.where(pred_in[\"Sex\"]==\"male\",1,0)"
+    "pred_in[\"sex_enc\"] = np.where(pred_in[\"Sex\"]==\"male\",1,0)\n",
+    "pred_in[\"new_age\"] = pred_in[\"Age\"].fillna(mean_age)"
    ]
   },
   {
@@ -138,7 +151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pred_ds = tf.data.Dataset.from_tensor_slices(pred_in[[\"sex_enc\", \"SibSp\", \"Parch\", \"Pclass\", \"Fare\"]])\n",
+    "pred_ds = tf.data.Dataset.from_tensor_slices(pred_in[[\"sex_enc\", \"SibSp\", \"Parch\", \"Pclass\", \"Fare\", \"new_age\"]])\n",
     "pred_ds = pred_ds.batch(batch_size)"
    ]
   },
