Remove code comment.

--- a/titanic_model.ipynb
+++ b/titanic_model.ipynb
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cc39f23",
+   "id": "16d1ef62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,11 +93,7 @@
     "batch_size = 10\n",
     "train_ds = df_to_dataset(train, shuffle=False, batch_size=batch_size)\n",
     "val_ds = df_to_dataset(val, shuffle=False, batch_size=batch_size)\n",
-    "test_ds = df_to_dataset(test, shuffle=False, batch_size=batch_size)\n",
-    "# a = train_ds.take(100)\n",
-    "# print(a)\n",
-    "# for element in a.as_numpy_iterator():\n",
-    "#   print(element)"
+    "test_ds = df_to_dataset(test, shuffle=False, batch_size=batch_size)"
    ]
   },
   {
