--- a/titanic_model.ipynb
+++ b/titanic_model.ipynb
@@ -136,7 +136,7 @@
    "source": [
     "test_data = pd.read_csv(\"./data/test.csv\")\n",
     "pred_in = test_data.copy()\n",
-    "pred_in[\"sex_enc\"] = np.where(pred_in[\"Sex\"]==\"male\",1,0)\n",
+    "pred_in[\"sex_enc\"] = np.where(pred_in[\"Sex\"]==\"male\", 1, 0)\n",
     "pred_in[\"new_age\"] = pred_in[\"Age\"].fillna(mean_age)"
    ]
   },
@@ -169,7 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pred_pd[\"Survived\"] = np.where(pred_pd[\"pred_survived\"]>0.6,1,0)"
+    "pred_pd[\"Survived\"] = np.where(pred_pd[\"pred_survived\"]>0.6, 1, 0)"
    ]
   },
   {
